tests/paczka1/small_fuzzy/87349122.err
Error in line 1: N70Sii61 S919 69,9
Error in line 10: S793 A940 96,8
Error in line 13: S793 S793 93,1
